argocd/aws/666628074417/clusters/cbioportal-prod/apps/cbioportal/eks-triage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: cbioportal:networking.k8s.io/Ingress:default/eks-triage-ingress
    ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
  name: eks-triage-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: triage-beta.cbioportal.aws.mskcc.org
      http:
        paths:
          - backend:
              service:
                name: eks-triage-blue
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: triage.cbioportal.mskcc.org
      http:
        paths:
          - backend:
              service:
                name: eks-triage-green
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: triage.cbioportal.aws.mskcc.org
      http:
        paths:
          - backend:
              service:
                name: eks-triage-green
                port:
                  number: 80
            path: /
            pathType: Prefix
